--- a/report/index.html
+++ b/report/index.html
@@ -20,10 +20,10 @@
     </thead>
     <tbody>
         <tr>
-            <td>10</td>
- <td>99% <div class="coverage_bar"><div class="coverage_complete width-99"></div><div class="coverage_legend">341/343</div></div></td>
-            <td>17% <div class="coverage_bar"><div class="coverage_complete width-17"></div><div class="coverage_legend">30/180</div></div></td>
-            <td>17% <div class="coverage_bar"><div class="coverage_complete width-17"></div><div class="coverage_legend">30/180</div></div></td>
+            <td>2</td>
+ <td>43% <div class="coverage_bar"><div class="coverage_complete width-43"></div><div class="coverage_legend">93/216</div></div></td>
+            <td>32% <div class="coverage_bar"><div class="coverage_complete width-32"></div><div class="coverage_legend">38/120</div></div></td>
+            <td>75% <div class="coverage_bar"><div class="coverage_complete width-75"></div><div class="coverage_legend">38/51</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -43,27 +43,11 @@
     <tbody>
 
         <tr>
-            <td><a href="./Test.BookStoreDataTest/index.html">Test.BookStoreDataTest</a></td>
+            <td><a href="./BookstoreData/index.html">BookstoreData</a></td>
             <td>2</td>
- <td><div class="coverage_percentage">100% </div><div class="coverage_bar"><div class="coverage_complete width-100"></div><div class="coverage_legend">109/109</div></div></td>
-            <td><div class="coverage_percentage">23% </div><div class="coverage_bar"><div class="coverage_complete width-23"></div><div class="coverage_legend">14/60</div></div></td>
-            <td><div class="coverage_percentage">23% </div><div class="coverage_bar"><div class="coverage_complete width-23"></div><div class="coverage_legend">14/60</div></div></td>
-        </tr>
-
-        <tr>
-            <td><a href="./Test.OrdersTest/index.html">Test.OrdersTest</a></td>
-            <td>3</td>
- <td><div class="coverage_percentage">98% </div><div class="coverage_bar"><div class="coverage_complete width-98"></div><div class="coverage_legend">105/107</div></div></td>
-            <td><div class="coverage_percentage">0% </div><div class="coverage_bar"><div class="coverage_complete width-0"></div><div class="coverage_legend">0/46</div></div></td>
-            <td><div class="coverage_percentage">0% </div><div class="coverage_bar"><div class="coverage_complete width-0"></div><div class="coverage_legend">0/46</div></div></td>
-        </tr>
-
-        <tr>
-            <td><a href="./Test.StaffTest/index.html">Test.StaffTest</a></td>
-            <td>5</td>
- <td><div class="coverage_percentage">100% </div><div class="coverage_bar"><div class="coverage_complete width-100"></div><div class="coverage_legend">127/127</div></div></td>
-            <td><div class="coverage_percentage">22% </div><div class="coverage_bar"><div class="coverage_complete width-22"></div><div class="coverage_legend">16/74</div></div></td>
-            <td><div class="coverage_percentage">22% </div><div class="coverage_bar"><div class="coverage_complete width-22"></div><div class="coverage_legend">16/74</div></div></td>
+ <td><div class="coverage_percentage">43% </div><div class="coverage_bar"><div class="coverage_complete width-43"></div><div class="coverage_legend">93/216</div></div></td>
+            <td><div class="coverage_percentage">32% </div><div class="coverage_bar"><div class="coverage_complete width-32"></div><div class="coverage_legend">38/120</div></div></td>
+            <td><div class="coverage_percentage">75% </div><div class="coverage_bar"><div class="coverage_complete width-75"></div><div class="coverage_legend">38/51</div></div></td>
         </tr>
 
      </tbody>
