--- a/report/index.html
+++ b/report/index.html
@@ -20,10 +20,10 @@
     </thead>
     <tbody>
         <tr>
-            <td>2</td>
- <td>43% <div class="coverage_bar"><div class="coverage_complete width-43"></div><div class="coverage_legend">93/216</div></div></td>
-            <td>32% <div class="coverage_bar"><div class="coverage_complete width-32"></div><div class="coverage_legend">38/120</div></div></td>
-            <td>75% <div class="coverage_bar"><div class="coverage_complete width-75"></div><div class="coverage_legend">38/51</div></div></td>
+            <td>4</td>
+ <td>41% <div class="coverage_bar"><div class="coverage_complete width-41"></div><div class="coverage_legend">109/264</div></div></td>
+            <td>28% <div class="coverage_bar"><div class="coverage_complete width-28"></div><div class="coverage_legend">34/121</div></div></td>
+            <td>85% <div class="coverage_bar"><div class="coverage_complete width-85"></div><div class="coverage_legend">34/40</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -43,11 +43,11 @@
     <tbody>
 
         <tr>
-            <td><a href="./BookstoreData/index.html">BookstoreData</a></td>
-            <td>2</td>
- <td><div class="coverage_percentage">43% </div><div class="coverage_bar"><div class="coverage_complete width-43"></div><div class="coverage_legend">93/216</div></div></td>
-            <td><div class="coverage_percentage">32% </div><div class="coverage_bar"><div class="coverage_complete width-32"></div><div class="coverage_legend">38/120</div></div></td>
-            <td><div class="coverage_percentage">75% </div><div class="coverage_bar"><div class="coverage_complete width-75"></div><div class="coverage_legend">38/51</div></div></td>
+            <td><a href="./Staff/index.html">Staff</a></td>
+            <td>4</td>
+ <td><div class="coverage_percentage">41% </div><div class="coverage_bar"><div class="coverage_complete width-41"></div><div class="coverage_legend">109/264</div></div></td>
+            <td><div class="coverage_percentage">28% </div><div class="coverage_bar"><div class="coverage_complete width-28"></div><div class="coverage_legend">34/121</div></div></td>
+            <td><div class="coverage_percentage">85% </div><div class="coverage_bar"><div class="coverage_complete width-85"></div><div class="coverage_legend">34/40</div></div></td>
         </tr>
 
      </tbody>
